--- a/docker/back/Dockerfile
+++ b/docker/back/Dockerfile
@@ -37,6 +37,13 @@ RUN sed -i 's#;date.timezone =#date.timezone = Europe/Paris#g' /etc/php/7.0/apac
 RUN sed -i 's#;date.timezone =#date.timezone = Europe/Paris#g' /etc/php/7.0/cli/php.ini
 RUN phpdismod xdebug
 
+# Install Composer
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+RUN php -r "if (hash_file('SHA384', 'composer-setup.php') === 'e115a8dc7871f15d853148a7fbac7da27d6c0030b848d9b3dc09e2a0388afed865e6a3d6b3c0fad45c48e2b5fc1196ae') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+RUN php composer-setup.php
+RUN php -r "unlink('composer-setup.php');"
+RUN mv /composer.phar /usr/local/bin/composer
+
 # Install Symfony
 RUN mkdir -p /usr/local/bin
 RUN curl -LsS https://symfony.com/installer -o /usr/local/bin/symfony
