--- a/docker/back/default.conf
+++ b/docker/back/default.conf
@@ -1,6 +1,6 @@
  <VirtualHost *:80>
-    DocumentRoot /var/www/web
-    <Directory /var/www/web/>
+    DocumentRoot /var/www/api/web
+    <Directory /var/www/api/web/>
         Options -Indexes +FollowSymLinks -MultiViews
         AllowOverride All
         Order allow,deny
