Update front config. Add 3000 port

--- a/docker/front/default.conf
+++ b/docker/front/default.conf
@@ -3,8 +3,8 @@
 
     ProxyPass /api http://back
 
-    DocumentRoot /var/www/dist
-    <Directory /var/www/dist/>
+    DocumentRoot /var/www/app
+    <Directory /var/www/app/>
        Options FollowSymLinks MultiViews
        AllowOverride All
        Require all granted
