Upgrade debian to ubuntu and PHP7 conf

--- a/docker-compose.common.yml
+++ b/docker-compose.common.yml
@@ -7,3 +7,8 @@ services:
     build: ./docker/front
   mysql:
     build: ./docker/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_DATABASE: test
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test
