--- a/docker/back/Dockerfile
+++ b/docker/back/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:8.3
+FROM ubuntu:latest
 
 MAINTAINER Vincent Nicopolsky <vincent.nicopolsky@gmail.com>
 
@@ -12,42 +12,60 @@ RUN groupmod -g 2000 www-data \
 
 # Install Base
 RUN apt-get update
-RUN apt-get install -y --force-yes --fix-missing vim nano wget curl htop telnet rsync lynx \
-                                                 procps make gcc rsyslog ca-certificates zip daemon \
-                                                 acl cpio net-tools apt-utils adduser debconf-utils \
-                                                 bzip2 python emacs
+RUN apt-get install \
+    -y --allow-downgrades --allow-remove-essential --allow-change-held-packages --fix-missing \
+    vim nano wget curl htop telnet rsync lynx \
+    procps make gcc rsyslog ca-certificates zip daemon \
+    acl cpio net-tools apt-utils adduser debconf-utils \
+    bzip2 python emacs
 
 # Install Supervisord elements
-RUN apt-get install -f -y --force-yes supervisor
-RUN apt-get install -f -y --force-yes rsyslog
+RUN apt-get install \
+    -f -y --allow-downgrades --allow-remove-essential --allow-change-held-packages \
+    supervisor \
+    rsyslog
+
+# Install NodeJS
+RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
+RUN apt-get install \
+    -f -y --allow-downgrades --allow-remove-essential --allow-change-held-packages \
+    nodejs \
+    build-essential
 
 # Install PHP7 + Apache
-RUN echo "deb http://packages.dotdeb.org jessie all" > /etc/apt/sources.list.d/dotdeb.list
-RUN wget -O- https://www.dotdeb.org/dotdeb.gpg | apt-key add -
-RUN apt-get update
-RUN apt-get install -f -y --force-yes apache2 php7.0 libapache2-mod-php7.0 php7.0-mysql php7.0-curl php7.0-json php7.0-gd php7.0-mcrypt php7.0-msgpack php7.0-memcached php7.0-intl php7.0-sqlite3 php7.0-gmp php7.0-geoip php7.0-mbstring php7.0-xml php7.0-zip
-RUN apt-get install -f -y --force-yes php7.0-xdebug phpunit mysql-client
+RUN apt-get install \
+    -f -y --allow-downgrades --allow-remove-essential --allow-change-held-packages \
+    apache2 \
+    php7.0 \
+    libapache2-mod-php7.0 \
+    php7.0-mysql \
+    php7.0-curl \
+    php7.0-json \
+    php7.0-gd \
+    php7.0-mcrypt \
+    php7.0-intl \
+    php7.0-sqlite3 \
+    php7.0-gmp \
+    php7.0-mbstring \
+    php7.0-xml \
+    php7.0-zip \
+    php-xdebug \
+    phpunit \
+    mysql-client
 
 # Conf Apache
 ADD php.ini /etc/php7.0/apache2/php.ini
 
 # Conf Php
+RUN service apache2 restart
 RUN a2enmod php7.0 rewrite headers proxy proxy_http proxy_connect
 RUN sed -i 's#;date.timezone =#date.timezone = Europe/Paris#g' /etc/php/7.0/apache2/php.ini
 RUN sed -i 's#;date.timezone =#date.timezone = Europe/Paris#g' /etc/php/7.0/cli/php.ini
 RUN phpdismod xdebug
 
 # Install Composer
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php -r "if (hash_file('SHA384', 'composer-setup.php') === 'aa96f26c2b67226a324c27919f1eb05f21c248b987e6195cad9690d5c1ff713d53020a02ac8c217dbf90a7eacc9d141d') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-RUN php composer-setup.php
-RUN php -r "unlink('composer-setup.php');"
-RUN mv /composer.phar /usr/local/bin/composer
-
-# Install Symfony
-RUN mkdir -p /usr/local/bin
-RUN curl -LsS https://symfony.com/installer -o /usr/local/bin/symfony
-RUN chmod a+x /usr/local/bin/symfony
+RUN curl -sS https://getcomposer.org/installer | \
+    php -- --install-dir=/usr/bin/ --filename=composer
 
 # Clean
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -63,6 +81,7 @@ WORKDIR /var/www
 
 # Expose Ports
 EXPOSE 80
+EXPOSE 8080
 EXPOSE 8000
 
 COPY supervisord.conf /etc/supervisor/supervisord.conf
